apps/bitmagnet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitmagnet
  namespace: torrent
  labels:
    app: bitmagnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bitmagnet
  template:
    metadata:
      labels:
        app: bitmagnet
    spec:
      containers:
        - name: bitmagnet
          image: ghcr.io/bitmagnet-io/bitmagnet:v0.10.1
          command: ["bitmagnet"]
          args:
            - worker
            - run
            - --keys=http_server
            - --keys=queue_server
            - --keys=dht_crawler
          ports:
            - containerPort: 3333
              name: gui
            - containerPort: 3334
              protocol: TCP
            - containerPort: 3334
              protocol: UDP
          volumeMounts:
            - mountPath: /root/.config/bitmagnet
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bitmagnet-config
