apps/bitmagnet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitmagnet
  namespace: torrent
spec:
  selector:
    app: bitmagnet
  ports:
    - port: 3333
      targetPort: 3333
      name: gui
    - protocol: TCP
      port: 3334
      targetPort: 3334
      name: torrent-tcp
    - protocol: UDP
      port: 3334
      targetPort: 3334
      name: torrent-udp
  type: ClusterIP
