apps/bitmagnet/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: bitmagnet
 namespace: torrent
spec:
 hostnames:
 - bitmagnet.tomasmerino.com
 parentRefs:
 - name: homelab-gateway
   namespace: networking
 rules:
  - backendRefs:
    - name: bitmagnet
      port: 3333
